@startuml lxkns-processes
skinparam nodesep 70
hide empty fields
hide empty methods
!define L <size:12><&link-intact></size><i>

package "lxkns.model" {

interface Namespace {
  L Leaders() []*Process
  L Ealdorman() *Process
  L LooseThreads() []*Task
}

Namespace ---> "0,1" Process : Ealdorman
Namespace ---> "*" Process : Leaders
Namespace ---> "*" Task: LooseThreads

class ProcessTable
Process <-- ProcessTable : "[PID]"

class ProTaskCommon <<abstract>> {
  L Namespaces NamespacesSet
}

ProTaskCommon --o Task
ProTaskCommon --o Process
ProTaskCommon -> "8" Namespace : Namespaces


class Task {
  L Process *Process
}

class Process {
  L Parent *Process
  L Tasks []*Task
  L *Container
}

Process "*" --> Process : Parent
Task <- Process : "Tasks" "1,*"

class Container {
  PID int
  L Process *Process
}

Process -> "0,1" Container : Container
Process <- Container : "Process"

}

@enduml
